objects/voice_connector__VCCall__c.object
<CustomObject>
    <description>Recording Information Object.</description>
    <fields>
        <fullName>voice_connector__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VCCalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCActivityId__c</fullName>
        <label>Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCCTIName__c</fullName>
        <label>CTI Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RingCentral</fullName>
                </value>
                <value>
                    <fullName>Dialpad</fullName>
                </value>
                <value>
                    <fullName>AmazonConnect</fullName>
                </value>
                <value>
                    <fullName>Aircall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>voice_connector__VCCallType__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>voice_connector__VCEndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCFromPhoneNumber__c</fullName>
        <label>From Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCHangup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VCHangup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCMediaProviderId__c</fullName>
        <label>Media Provider Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCNumberChannels__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number Channels</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCProcessedByECI2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed by ECI (second API call)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCProcessedByECI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed by ECI (first API call)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCProcessedBy__c</fullName>
        <label>Processed by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Webhook</fullName>
                </value>
                <value>
                    <fullName>Recrawl</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>voice_connector__VCRecordingDuration__c</fullName>
        <label>Recording Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCRecordingFormat__c</fullName>
        <label>Recording Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mp3</fullName>
                </value>
                <value>
                    <fullName>wav</fullName>
                </value>
                <value>
                    <fullName>flac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>voice_connector__VCRecording__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VCRecording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCStartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCToPhoneNumber__c</fullName>
        <label>To Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCUniqueExternalId__c</fullName>
        <externalId>true</externalId>
        <label>VCUniqueExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>voice_connector__VCVoiceCall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to OOTB VoiceCall object</description>
        <label>VCVoiceCall</label>
        <referenceTo>VoiceCall</referenceTo>
        <relationshipLabel>VCCalls</relationshipLabel>
        <relationshipName>VCCalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VCCall</label>
    <listViews>
        <fullName>voice_connector__All</fullName>
        <columns>NAME</columns>
        <columns>voice_connector__VCCallType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>voice_connector__VCCTIName__c</columns>
        <columns>voice_connector__VCFromPhoneNumber__c</columns>
        <columns>voice_connector__VCToPhoneNumber__c</columns>
        <columns>voice_connector__VCProcessedBy__c</columns>
        <columns>voice_connector__VCProcessedByECI__c</columns>
        <columns>voice_connector__VCProcessedByECI2__c</columns>
        <columns>voice_connector__VCVoiceCall__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCCalls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>